# gstreamer-face-sticker-plugin

./: .env.sample  .gitignore  CMakeLists.txt  README.MD  libfacedetection_install.sh  main.cpp
face-sticker-plugin/: gstfacesticker.cpp  gstfacesticker.hpp
